Create the components title and button

--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@ src(source)-> endereço de busca da imagem no em diretório local
 <!--a tag de fechamento em img é facultativa, pois o fechamento é só quando precisa de um fim no caminho. A imagem não leva a caminho nenhum-->
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <!--heading(Título)-->
-    <h1>Rafael Henrique</h1>
-    <h2>Full stack developer</h2>
-
-    <!--paragraph-->
-    <p>Olá sou Rafael, mas popularmente conhecido como Rafa. Sou estudante de Ciência da Computação no CEFET-RJ. Gosto muito de tecnologia. Sou apaixonado por video games. Estou estudando para me tornar desenvolvedor full stack. Já tive contato com as linguagens de programação C,  Java, Python e JavaScript. Agora estou aprendendo HTML e CSS.
-    </p>
-
+    
     <head>
         <title>Rafael Henrique</title>
         <!--suporte de carcteres a qualquer idioma-->
@@ -27,9 +20,11 @@ src(source)-> endereço de busca da imagem no em diretório local
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
-
-        <link rel="stylesheet" href="CSS/index.css">
-        <link rel="stylesheet" href="CSS/Reset.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/Reset.css">
+        <link rel="stylesheet" href="css/Components/title.css">
+        <link rel="stylesheet" href="css/Components/button.css">
     </head>
 
     <body>
@@ -45,7 +40,11 @@ src(source)-> endereço de busca da imagem no em diretório local
             </nav>    
         </header>
             <!--<em></em> dá ênfase a um termo no leitor de tela-->
-        <p>Estou estudando <em lang="en">front-end</em> !</p>
+        <!--heading(Título)-->    
+        <h1>Rafael Henrique</h1>
+        <!--paragraph-->
+        <p>Olá sou Rafael, mas popularmente conhecido como Rafa. Sou estudante de Ciência da Computação no CEFET-RJ. Gosto muito de tecnologia. Sou apaixonado por video games. Estou estudando para me tornar desenvolvedor full stack. Já tive contato com as linguagens de programação C,  Java, Python e JavaScript. Agora estou aprendendo HTML e CSS.
+        </p>
     </body>
 
 </html>
