--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ src(source)-> endereço de busca da imagem no em diretório local
         <link rel="stylesheet" href="css/Reset.css">
         <link rel="stylesheet" href="css/Components/title.css">
         <link rel="stylesheet" href="css/Components/button.css">
+        <link rel="stylesheet" href="css/Components/subtitle.css">
     </head>
 
     <body>
@@ -42,6 +43,8 @@ src(source)-> endereço de busca da imagem no em diretório local
             <!--<em></em> dá ênfase a um termo no leitor de tela-->
         <!--heading(Título)-->    
         <h1>Rafael Henrique</h1>
+
+        <h2>Full Stack Developer</h2>
         <!--paragraph-->
         <p>Olá sou Rafael, mas popularmente conhecido como Rafa. Sou estudante de Ciência da Computação no CEFET-RJ. Gosto muito de tecnologia. Sou apaixonado por video games. Estou estudando para me tornar desenvolvedor full stack. Já tive contato com as linguagens de programação C,  Java, Python e JavaScript. Agora estou aprendendo HTML e CSS.
         </p>
