--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ src(source)-> endereço de busca da imagem no em diretório local
         <link rel="stylesheet" href="css/Components/title.css">
         <link rel="stylesheet" href="css/Components/button.css">
         <link rel="stylesheet" href="css/Components/subtitle.css">
+        <link rel="stylesheet" href="css/Components/box.css">
     </head>
 
     <body>
@@ -46,6 +47,9 @@ src(source)-> endereço de busca da imagem no em diretório local
 
         <h2>Full Stack Developer</h2>
         <!--paragraph-->
+
+        <div id="box"></div>
+
         <p>Olá sou Rafael, mas popularmente conhecido como Rafa. Sou estudante de Ciência da Computação no CEFET-RJ. Gosto muito de tecnologia. Sou apaixonado por video games. Estou estudando para me tornar desenvolvedor full stack. Já tive contato com as linguagens de programação C,  Java, Python e JavaScript. Agora estou aprendendo HTML e CSS.
         </p>
     </body>
