--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ src(source)-> endereço de busca da imagem no em diretório local
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
-        <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="css/Reset.css">
-        <link rel="stylesheet" href="css/Components/title.css">
-        <link rel="stylesheet" href="css/Components/button.css">
-        <link rel="stylesheet" href="css/Components/subtitle.css">
-        <link rel="stylesheet" href="css/Components/box.css">
+        <link rel="stylesheet" href="CSS/index.css">
+        <link rel="stylesheet" href="CSS/Reset.css">
+        <link rel="stylesheet" href="CSS/Components/title.css">
+        <link rel="stylesheet" href="CSS/Components/button.css">
+        <link rel="stylesheet" href="CSS/Components/subtitle.css">
+        <link rel="stylesheet" href="CSS/Components/box.css">
     </head>
 
     <body>
