Add link of card-project

--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@ src(source)-> endereço de busca da imagem no em diretório local
 
         <section class="initial-page -third">
             <h1 class="main-title -second -third">Projetos</h1>
-            <figure class="card-project">
-                <img class="logo" src="assets/images/logoRAFAEL11.png" all="Logo do card projeto portifólio">
-            </figure>
-            
+                <a href="https://rafahcs.github.io"> <!--target="_blank"-->
+                    <figure class="card-project">
+                        <img class="logo" src="assets/images/logoRAFAEL11.png" all="Logo do card projeto portifólio">
+                    </figure>
+                </a>
         </section>
         <!--paragraph-->
         <!--<p>Olá sou Rafael, mas popularmente conhecido como Rafa. Sou estudante de Ciência da Computação no CEFET-RJ. Gosto muito de tecnologia. Sou apaixonado por video games. Estou estudando para me tornar desenvolvedor full stack. Já tive contato com as linguagens de programação C,  Java, Python e JavaScript. Agora estou aprendendo HTML e CSS.
