Refactor box to box-title, title to main-title, skill to skill-tec

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ src(source)-> endereço de busca da imagem no em diretório local
             <!--<em></em> dá ênfase a um termo no leitor de tela-->
         
         <section class="initial-page">
-            <div class="wrapper">
+            <div class="main-wrapper">
                 
                 <div class="box-title">
                     <!--heading(Título)-->    
