add monetag hosting
Adicionai monetização de site com a https://monetag.com/

--- a/rafahcs.github.io/index.html
+++ b/rafahcs.github.io/index.html
@@ -16,6 +16,7 @@ src(source)-> endereço de busca da imagem no em diretório local
         <title>Rafael Henrique</title>
         <!--suporte de carcteres a qualquer idioma-->
         <meta charset="utf-8">
+        <meta name="monetag" content="1fa04101e172ce93546e0d87caeb142f">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
